--- a/resources/product/ProductTranslations.table.yml
+++ b/resources/product/ProductTranslations.table.yml
@@ -9,17 +9,17 @@ Properties:
     - AttributeName: language
       AttributeType: S
 
-    - AttributeName: name
-      AttributeType: S
+    # - AttributeName: name
+    #   AttributeType: S
 
-    - AttributeName: description
-      AttributeType: S
+    # - AttributeName: description
+    #   AttributeType: S
 
-    - AttributeName: preview_description
-      AttributeType: S
+    # - AttributeName: preview_description
+    #   AttributeType: S
 
-    - AttributeName: text
-      AttributeType: S
+    # - AttributeName: text
+    #   AttributeType: S
 
   KeySchema:
     - AttributeName: product_id
