--- a/package.json
+++ b/package.json
@@ -34,15 +34,14 @@
     "sls:dev": "yarn sls offline start"
   },
   "dependencies": {
-    "@fastify/static": "^6.6.0",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-fastify": "^9.0.0",
-    "@nestjs/swagger": "^6.1.4",
+    "@nestjs/common": "^9.3.7",
+    "@nestjs/core": "^9.3.7",
+    "@nestjs/platform-express": "^9.3.7",
+    "@nestjs/swagger": "^6.2.1",
+    "@vendia/serverless-express": "^4.10.1",
     "aws-lambda": "^1.0.7",
-    "aws-sdk": "^2.1279.0",
-    "aws-serverless-fastify": "^3.0.0",
-    "fastify": "^4.10.2",
+    "aws-sdk": "^2.1312.0",
+    "express": "^4.18.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -67,19 +66,22 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-security-node": "^1.1.1",
     "eslint-plugin-sonarjs": "^0.17.0",
+    "fork-ts-checker-webpack-plugin": "^7.3.0",
     "jest": "28.1.3",
     "prettier": "^2.3.2",
     "serverless": "^3.25.1",
     "serverless-offline": "^12.0.3",
     "serverless-plugin-optimize": "^4.2.1-rc.1",
-    "serverless-plugin-typescript": "^2.1.4",
     "serverless-s3-local": "^0.7.1",
+    "serverless-webpack": "^5.11.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
-    "ts-loader": "^9.2.3",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack": "^5.75.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
