feat: remake architecture

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,10 @@
 	"editor.guides.bracketPairs": "active",
 	"editor.codeActionsOnSave": {
 		"source.fixAll.eslint": true
+	},
+	"jest.autoRun": {
+		"watch": false,
+		"onSave": "test-file",
+		"onStartup": ["all-tests"]
 	}
 }
