--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "coffee-e-shop",
   "version": "1.0.0",
-  "license": "GPLv3",
+  "license": "MIT",
+  "main": "./dist/main.js",
   "author": "async-devil",
   "private": true,
   "repository": {
@@ -12,76 +13,22 @@
     "url": "https://github.com/async-devil/coffee-e-shop/issues"
   },
   "keywords": [
-    "Fastify",
     "Typescript",
     "Nestjs",
-    "Serverless",
     "AWS"
   ],
+  "workspaces": [
+    "apps/**"
+  ],
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "sls:dev": "yarn sls offline start"
+    "build:dev": "sudo docker compose -f docker-compose.dev.yml --env-file ./.dev.env build",
+    "start:dev": "sudo docker compose -f docker-compose.dev.yml --env-file ./.dev.env up",
+    "build:prod": "sudo docker compose -f docker-compose.prod.yml --env-file ./.prod.env build",
+    "start:prod": "sudo docker compose -f docker-compose.prod.yml --env-file ./.prod.env up"
   },
-  "dependencies": {
-    "@nestjs/common": "^9.3.7",
-    "@nestjs/core": "^9.3.7",
-    "@nestjs/platform-express": "^9.3.7",
-    "@nestjs/swagger": "^6.2.1",
-    "@vendia/serverless-express": "^4.10.1",
-    "aws-lambda": "^1.0.7",
-    "aws-sdk": "^2.1312.0",
-    "express": "^4.18.2",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/aws-lambda": "^8.10.109",
-    "@types/express": "^4.17.13",
-    "@types/jest": "28.1.8",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.1.3",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-security-node": "^1.1.1",
-    "eslint-plugin-sonarjs": "^0.17.0",
-    "fork-ts-checker-webpack-plugin": "^7.3.0",
-    "jest": "28.1.3",
-    "prettier": "^2.3.2",
-    "serverless": "^3.25.1",
-    "serverless-offline": "^12.0.3",
-    "serverless-plugin-optimize": "^4.2.1-rc.1",
-    "serverless-s3-local": "^0.7.1",
-    "serverless-webpack": "^5.11.0",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.8",
-    "ts-loader": "^9.4.2",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4",
-    "webpack": "^5.75.0",
-    "webpack-node-externals": "^3.0.0"
+  "jest": {
+    "projects": [
+      "<rootDir>/apps/**/jest.config.cjs"
+    ]
   }
 }
