--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -19,12 +19,15 @@
     "migration:generate": "yarn typeorm migration:generate --dr"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.279.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/throttler": "^4.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "helmet": "^6.0.1",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
@@ -37,6 +40,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
