feat: add aws access keys stubs to env example

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ POSTGRES_PASS="toor"
 # pgAdmin default credentials
 PGADMIN_EMAIL="root@root.com"
 PGADMIN_PASS="toor"
+
+# dev aws acccess keys
+AWS_ACCESS_KEY="***************RFKJT"
+AWS_SECRET_ACCESS_KEY="*********************************DZq861X"
