feat: add auth constants stubs into env example

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,13 @@ POSTGRES_PASS="toor"
 PGADMIN_EMAIL="root@root.com"
 PGADMIN_PASS="toor"
 
-# dev aws acccess keys
+# Dev aws acccess keys
 AWS_ACCESS_KEY="***************RFKJT"
 AWS_SECRET_ACCESS_KEY="*********************************DZq861X"
+
+# JWT information
+ACCESS_TOKEN_SECRET="%g9{[c}_PP'pExA{Zp$6{Wr;z,0l3h"
+ACCESS_TOKEN_TTL=3600 # 1h in seconds
+
+# Admin page password
+ADMIN_PASSWORD="password"
