feat: update env example

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ AWS_ACCESS_KEY="***************RFKJT"
 AWS_SECRET_ACCESS_KEY="*********************************DZq861X"
 
 # JWT information
-ACCESS_TOKEN_SECRET="%g9{[c}_PP'pExA{Zp$6{Wr;z,0l3h"
+ACCESS_TOKEN_SECRET="****************M6S3xH]G"
 ACCESS_TOKEN_TTL=3600 # 1h in seconds
 
 # Admin page password
