--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,7 +15,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "typeorm": "node scripts/typeormCli.cjs -d dist/database/ormconfig",
+    "typeorm": "npx ts-node -r tsconfig-paths/register --project ./tsconfig.json ./node_modules/.bin/typeorm -d src/database/ormconfig.ts",
     "migration:generate": "yarn typeorm migration:generate --dr"
   },
   "dependencies": {
